src/Skia/Bindings/Types.hsc


{- | Opaque C struct: @"sk_shader_t"@
-}
data Sk_shader = Sk_shader

{- | Opaque C struct: @"sk_surface_t"@
-}
data Sk_surface = Sk_surface

{- | Opaque C struct: @"sk_region_t"@
-}
data Sk_region = Sk_region

{- | Opaque C struct: @"sk_region_iterator_t"@
-}
data Sk_region_iterator = Sk_region_iterator

{- | Opaque C struct: @"sk_region_cliperator_t"@
-}
data Sk_region_cliperator = Sk_region_cliperator

{- | Opaque C struct: @"sk_region_spanerator_t"@
-}
data Sk_region_spanerator = Sk_region_spanerator

{- | C enum: @"sk_blendmode_t"@

@
typedef enum 
{
  CLEAR_SK_BLENDMODE,
  SRC_SK_BLENDMODE,
  DST_SK_BLENDMODE,
  SRCOVER_SK_BLENDMODE,
  DSTOVER_SK_BLENDMODE,
  SRCIN_SK_BLENDMODE,
  DSTIN_SK_BLENDMODE,
  SRCOUT_SK_BLENDMODE,
  DSTOUT_SK_BLENDMODE,
  SRCATOP_SK_BLENDMODE,
  DSTATOP_SK_BLENDMODE,
  XOR_SK_BLENDMODE,
  PLUS_SK_BLENDMODE,
  MODULATE_SK_BLENDMODE,
  SCREEN_SK_BLENDMODE,
  OVERLAY_SK_BLENDMODE,
  DARKEN_SK_BLENDMODE,
  LIGHTEN_SK_BLENDMODE,
  COLORDODGE_SK_BLENDMODE,
  COLORBURN_SK_BLENDMODE,
  HARDLIGHT_SK_BLENDMODE,
  SOFTLIGHT_SK_BLENDMODE,
  DIFFERENCE_SK_BLENDMODE,
  EXCLUSION_SK_BLENDMODE,
  MULTIPLY_SK_BLENDMODE,
  HUE_SK_BLENDMODE,
  SATURATION_SK_BLENDMODE,
  COLOR_SK_BLENDMODE,
  LUMINOSITY_SK_BLENDMODE
} sk_blendmode_t
@

-}
newtype Sk_blendmode = Sk_blendmode (#type sk_blendmode_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_blendmode_t"@ value (1/29): @"CLEAR_SK_BLENDMODE"@
pattern CLEAR_SK_BLENDMODE :: Sk_blendmode
pattern CLEAR_SK_BLENDMODE = (#const CLEAR_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (2/29): @"SRC_SK_BLENDMODE"@
pattern SRC_SK_BLENDMODE :: Sk_blendmode
pattern SRC_SK_BLENDMODE = (#const SRC_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (3/29): @"DST_SK_BLENDMODE"@
pattern DST_SK_BLENDMODE :: Sk_blendmode
pattern DST_SK_BLENDMODE = (#const DST_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (4/29): @"SRCOVER_SK_BLENDMODE"@
pattern SRCOVER_SK_BLENDMODE :: Sk_blendmode
pattern SRCOVER_SK_BLENDMODE = (#const SRCOVER_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (5/29): @"DSTOVER_SK_BLENDMODE"@
pattern DSTOVER_SK_BLENDMODE :: Sk_blendmode
pattern DSTOVER_SK_BLENDMODE = (#const DSTOVER_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (6/29): @"SRCIN_SK_BLENDMODE"@
pattern SRCIN_SK_BLENDMODE :: Sk_blendmode
pattern SRCIN_SK_BLENDMODE = (#const SRCIN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (7/29): @"DSTIN_SK_BLENDMODE"@
pattern DSTIN_SK_BLENDMODE :: Sk_blendmode
pattern DSTIN_SK_BLENDMODE = (#const DSTIN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (8/29): @"SRCOUT_SK_BLENDMODE"@
pattern SRCOUT_SK_BLENDMODE :: Sk_blendmode
pattern SRCOUT_SK_BLENDMODE = (#const SRCOUT_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (9/29): @"DSTOUT_SK_BLENDMODE"@
pattern DSTOUT_SK_BLENDMODE :: Sk_blendmode
pattern DSTOUT_SK_BLENDMODE = (#const DSTOUT_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (10/29): @"SRCATOP_SK_BLENDMODE"@
pattern SRCATOP_SK_BLENDMODE :: Sk_blendmode
pattern SRCATOP_SK_BLENDMODE = (#const SRCATOP_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (11/29): @"DSTATOP_SK_BLENDMODE"@
pattern DSTATOP_SK_BLENDMODE :: Sk_blendmode
pattern DSTATOP_SK_BLENDMODE = (#const DSTATOP_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (12/29): @"XOR_SK_BLENDMODE"@
pattern XOR_SK_BLENDMODE :: Sk_blendmode
pattern XOR_SK_BLENDMODE = (#const XOR_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (13/29): @"PLUS_SK_BLENDMODE"@
pattern PLUS_SK_BLENDMODE :: Sk_blendmode
pattern PLUS_SK_BLENDMODE = (#const PLUS_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (14/29): @"MODULATE_SK_BLENDMODE"@
pattern MODULATE_SK_BLENDMODE :: Sk_blendmode
pattern MODULATE_SK_BLENDMODE = (#const MODULATE_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (15/29): @"SCREEN_SK_BLENDMODE"@
pattern SCREEN_SK_BLENDMODE :: Sk_blendmode
pattern SCREEN_SK_BLENDMODE = (#const SCREEN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (16/29): @"OVERLAY_SK_BLENDMODE"@
pattern OVERLAY_SK_BLENDMODE :: Sk_blendmode
pattern OVERLAY_SK_BLENDMODE = (#const OVERLAY_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (17/29): @"DARKEN_SK_BLENDMODE"@
pattern DARKEN_SK_BLENDMODE :: Sk_blendmode
pattern DARKEN_SK_BLENDMODE = (#const DARKEN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (18/29): @"LIGHTEN_SK_BLENDMODE"@
pattern LIGHTEN_SK_BLENDMODE :: Sk_blendmode
pattern LIGHTEN_SK_BLENDMODE = (#const LIGHTEN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (19/29): @"COLORDODGE_SK_BLENDMODE"@
pattern COLORDODGE_SK_BLENDMODE :: Sk_blendmode
pattern COLORDODGE_SK_BLENDMODE = (#const COLORDODGE_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (20/29): @"COLORBURN_SK_BLENDMODE"@
pattern COLORBURN_SK_BLENDMODE :: Sk_blendmode
pattern COLORBURN_SK_BLENDMODE = (#const COLORBURN_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (21/29): @"HARDLIGHT_SK_BLENDMODE"@
pattern HARDLIGHT_SK_BLENDMODE :: Sk_blendmode
pattern HARDLIGHT_SK_BLENDMODE = (#const HARDLIGHT_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (22/29): @"SOFTLIGHT_SK_BLENDMODE"@
pattern SOFTLIGHT_SK_BLENDMODE :: Sk_blendmode
pattern SOFTLIGHT_SK_BLENDMODE = (#const SOFTLIGHT_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (23/29): @"DIFFERENCE_SK_BLENDMODE"@
pattern DIFFERENCE_SK_BLENDMODE :: Sk_blendmode
pattern DIFFERENCE_SK_BLENDMODE = (#const DIFFERENCE_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (24/29): @"EXCLUSION_SK_BLENDMODE"@
pattern EXCLUSION_SK_BLENDMODE :: Sk_blendmode
pattern EXCLUSION_SK_BLENDMODE = (#const EXCLUSION_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (25/29): @"MULTIPLY_SK_BLENDMODE"@
pattern MULTIPLY_SK_BLENDMODE :: Sk_blendmode
pattern MULTIPLY_SK_BLENDMODE = (#const MULTIPLY_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (26/29): @"HUE_SK_BLENDMODE"@
pattern HUE_SK_BLENDMODE :: Sk_blendmode
pattern HUE_SK_BLENDMODE = (#const HUE_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (27/29): @"SATURATION_SK_BLENDMODE"@
pattern SATURATION_SK_BLENDMODE :: Sk_blendmode
pattern SATURATION_SK_BLENDMODE = (#const SATURATION_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (28/29): @"COLOR_SK_BLENDMODE"@
pattern COLOR_SK_BLENDMODE :: Sk_blendmode
pattern COLOR_SK_BLENDMODE = (#const COLOR_SK_BLENDMODE)

-- | C enum @"sk_blendmode_t"@ value (29/29): @"LUMINOSITY_SK_BLENDMODE"@
pattern LUMINOSITY_SK_BLENDMODE :: Sk_blendmode
pattern LUMINOSITY_SK_BLENDMODE = (#const LUMINOSITY_SK_BLENDMODE)

{- | C struct: @"sk_point3_t"@

@
typedef struct 
{
  float x;
  float y;
  float z;
} sk_point3_t
@
-}
data Sk_point3 = Sk_point3
  { x :: CFloat -- ^ C field: @"float x"@
  , y :: CFloat -- ^ C field: @"float y"@
  , z :: CFloat -- ^ C field: @"float z"@
  }
instance Foreign.Storable.Offset.Offset "x" Sk_point3 where
  rawOffset = (#offset sk_point3_t, x)
instance Foreign.Storable.Offset.Offset "y" Sk_point3 where
  rawOffset = (#offset sk_point3_t, y)
instance Foreign.Storable.Offset.Offset "z" Sk_point3 where
  rawOffset = (#offset sk_point3_t, z)
instance Foreign.Storable.Storable Sk_point3 where
  sizeOf _ = (#size sk_point3_t)
  alignment _ = (#alignment sk_point3_t)
  peek p' = do
    x <- (#peek sk_point3_t, x) p'
    y <- (#peek sk_point3_t, y) p'
    z <- (#peek sk_point3_t, z) p'
    pure Sk_point3{..}
  poke p' Sk_point3{..} = do
    (#poke sk_point3_t, x) p' x
    (#poke sk_point3_t, y) p' y
    (#poke sk_point3_t, z) p' z

{- | C struct: @"sk_ipoint_t"@

@
typedef struct 
{
  int32_t x;
  int32_t y;
} sk_ipoint_t
@
-}
data Sk_ipoint = Sk_ipoint
  { x :: Int32 -- ^ C field: @"int32_t x"@
  , y :: Int32 -- ^ C field: @"int32_t y"@
  }
instance Foreign.Storable.Offset.Offset "x" Sk_ipoint where
  rawOffset = (#offset sk_ipoint_t, x)
instance Foreign.Storable.Offset.Offset "y" Sk_ipoint where
  rawOffset = (#offset sk_ipoint_t, y)
instance Foreign.Storable.Storable Sk_ipoint where
  sizeOf _ = (#size sk_ipoint_t)
  alignment _ = (#alignment sk_ipoint_t)
  peek p' = do
    x <- (#peek sk_ipoint_t, x) p'
    y <- (#peek sk_ipoint_t, y) p'
    pure Sk_ipoint{..}
  poke p' Sk_ipoint{..} = do
    (#poke sk_ipoint_t, x) p' x
    (#poke sk_ipoint_t, y) p' y

{- | C struct: @"sk_size_t"@

@
typedef struct 
{
  float w;
  float h;
} sk_size_t
@
-}
data Sk_size = Sk_size
  { w :: CFloat -- ^ C field: @"float w"@
  , h :: CFloat -- ^ C field: @"float h"@
  }
instance Foreign.Storable.Offset.Offset "w" Sk_size where
  rawOffset = (#offset sk_size_t, w)
instance Foreign.Storable.Offset.Offset "h" Sk_size where
  rawOffset = (#offset sk_size_t, h)
instance Foreign.Storable.Storable Sk_size where
  sizeOf _ = (#size sk_size_t)
  alignment _ = (#alignment sk_size_t)
  peek p' = do
    w <- (#peek sk_size_t, w) p'
    h <- (#peek sk_size_t, h) p'
    pure Sk_size{..}
  poke p' Sk_size{..} = do
    (#poke sk_size_t, w) p' w
    (#poke sk_size_t, h) p' h

{- | C struct: @"sk_isize_t"@

@
typedef struct 
{
  int32_t w;
  int32_t h;
} sk_isize_t
@
-}
data Sk_isize = Sk_isize
  { w :: Int32 -- ^ C field: @"int32_t w"@
  , h :: Int32 -- ^ C field: @"int32_t h"@
  }
instance Foreign.Storable.Offset.Offset "w" Sk_isize where
  rawOffset = (#offset sk_isize_t, w)
instance Foreign.Storable.Offset.Offset "h" Sk_isize where
  rawOffset = (#offset sk_isize_t, h)
instance Foreign.Storable.Storable Sk_isize where
  sizeOf _ = (#size sk_isize_t)
  alignment _ = (#alignment sk_isize_t)
  peek p' = do
    w <- (#peek sk_isize_t, w) p'
    h <- (#peek sk_isize_t, h) p'
    pure Sk_isize{..}
  poke p' Sk_isize{..} = do
    (#poke sk_isize_t, w) p' w
    (#poke sk_isize_t, h) p' h

{- | C struct: @"sk_fontmetrics_t"@
